feat: make job run in selenium docker container